--- a/templates/m/user_addcar.html
+++ b/templates/m/user_addcar.html
@@ -50,7 +50,7 @@
 					</div>
 					<div class="uk-width-9-10 uk-text-left right">
 						<select class="subbrand" id="subsubbrand" name="p_subsubbrand" datatype="n" nullmsg="请选择款式！">
-							<option  value="">请选择款式</option>
+							<option  value="">请选1择款式</option>
 							<{$select_subsubbrand}>	
 						</select>
 					</div>
