--- a/templates/m/user_addcar.html
+++ b/templates/m/user_addcar.html
@@ -97,7 +97,7 @@
 			<div class="box business-hz">
 				<div class="uk-grid uk-grid-collapse">
 					<div class="uk-width-8-10 left">
-						<input name="p_kilometre" type="text" id="p_kilometre" size="5" value="<{$cars.p_kilometre}>"  />
+						<input name="p_kilometre" type="text" id="p_kilometre" size="5" value="<{$cars.p_kilometre}>" placeholder="里程数" />
 					</div>
 					<div class="uk-width-2-10 uk-text-right right">
 						万公里
@@ -107,7 +107,7 @@
 			<div class="box business-hz">
 				<div class="uk-grid uk-grid-collapse">
 					<div class="uk-width-8-10 left">
-						<input type="text" name="p_price"  size="5" value="<{$cars.p_price}>" datatype="s" nullmsg="请填写价格！">
+						<input type="text" name="p_price"  size="5" value="<{$cars.p_price}>" datatype="s" nullmsg="请填写价格！" placeholder="预售价">
 					</div>
 					<div class="uk-width-2-10 uk-text-right right">
 						万元
@@ -117,7 +117,7 @@
 			<div class="box business-hz">
 				<div class="uk-grid uk-grid-collapse">
 					<div class="uk-width-8-10 left">
-						<input type="text" name="p_newprice"  size="5" value="<{$cars.p_newprice}>">
+						<input type="text" name="p_newprice"  size="5" value="<{$cars.p_newprice}>" placeholder="出厂价">
 					</div>
 					<div class="uk-width-2-10 uk-text-right right">
 						万元
@@ -127,7 +127,7 @@
 			<div class="box business-hz">
 				<div class="uk-grid uk-grid-collapse">
 					<div class="uk-width-8-10 left">
-						<input type="text" name="p_tax"  size="5" value="<{$cars.p_tax}>">
+						<input type="text" name="p_tax"  size="5" value="<{$cars.p_tax}>" placeholder="购置税">
 					</div>
 					<div class="uk-width-2-10 uk-text-right right">
 						万元
@@ -137,7 +137,7 @@
 			<div class="box business-hz">
 				<div class="uk-grid uk-grid-collapse">
 					<div class="uk-width-8-10 left">
-						<input type="text" name="p_save"  size="5" value="<{$cars.p_save}>">
+						<input type="text" name="p_save"  size="5" value="<{$cars.p_save}>" placeholder="为您节省">
 					</div>
 					<div class="uk-width-2-10 uk-text-right right">
 						万元
@@ -148,6 +148,7 @@
 				<div class="uk-grid uk-grid-collapse">
 					<div class="uk-width-8-10 left">
 						<select name="p_color">
+							<option>车体颜色</option>
 							<{$select_color}>
 						</select>
 					</div>
