--- a/templates/m/user_addcar.html
+++ b/templates/m/user_addcar.html
@@ -146,14 +146,13 @@
 			</div>
 			<div class="box business-hz">
 				<div class="uk-grid uk-grid-collapse">
-					<div class="uk-width-8-10 left">
+					<div class="uk-width-1-10 uk-text-left left2">
+						车体颜色：
+					</div>
+					<div class="uk-width-9-10 uk-text-left right">
 						<select name="p_color">
-							<option>车体颜色</option>
 							<{$select_color}>
 						</select>
-					</div>
-					<div class="uk-width-2-10 uk-text-right right">
-						<i class="uk-icon-angle-right"></i>
 					</div>
 				</div>
 			</div>
