--- a/templates/m/user_addcar.html
+++ b/templates/m/user_addcar.html
@@ -97,7 +97,7 @@
 			<div class="box business-hz">
 				<div class="uk-grid uk-grid-collapse">
 					<div class="uk-width-8-10 left">
-						<input name="p_kilometre" type="text" id="p_kilometre" size="5" value="<{$cars.p_kilometre}>" placeholder="里程数" onfocus="this.blur();" />
+						<input name="p_kilometre" type="number" id="p_kilometre" size="5" value="<{$cars.p_kilometre}>" placeholder="里程数" />
 					</div>
 					<div class="uk-width-2-10 uk-text-right right">
 						万公里
