--- a/templates/m/user_addcar.html
+++ b/templates/m/user_addcar.html
@@ -246,7 +246,7 @@
 			$("#brand").change(function(){
 				$.get("<{$weburl}>/index.php?m=ajax&ajax=1", { 
 					brandid :  $("#brand").val() 
-				}, function (data, textStatus){alert(data);
+				}, function (data, textStatus){alert("<{$weburl}>/index.php?m=ajax&ajax=1");
 									 $("#subbrand").html(data); // 把返回的数据添加到页面上
 					}
 				);
