--- a/templates/m/user_addcar.html
+++ b/templates/m/user_addcar.html
@@ -20,7 +20,7 @@
 			<div class="uk-width-1-10"></div>
 		</div>
 		
-	<form name="form1" class="carform" enctype="multipart/form-data" method="post" action="m/index.php?m=user">	
+	<form name="form1" class="carform" enctype="multipart/form-data" method="post" action="index.php?m=user">	
 		<div class="business-tianjia uk-margin-bottom">
 			<div class="box business-hz">
 				<div class="uk-grid uk-grid-collapse">
