--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -1,4 +1,22 @@
-<{include file="mobile/`$setting.templates`/common/header.html"}>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" >	
+	<title>途众好车</title>
+	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/bootstrap/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/css/mobile.css">
+	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/css/common.css">
+	
+	<script type="text/javascript" src="<{$weburl}>/static/js/uikit/jquery-1-11-3.js"></script>
+	<script type="text/javascript" src="<{$weburl}>/static/js/uikit/jquery.mobile.custom.min.js"></script>
+	<script type="text/javascript" src="<{$weburl}>/static/js/uikit/bootstrap.min.js"></script>
+
+	<script src="<{$weburl}>/templates/m/css/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/static/js/Validform_v5.3.2_min.js"></script>
+</head>
 <body>
 	<div class="container-fluid">
 		<div class="row">
