--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -19,7 +19,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="mobile_user_top text-center">
-				<a href="javascript:window.history.go(-1);"><img src="/static/img/mobile/user_back.jpg"></a>
+				<a href="javascript:window.history.go(-1);"><img src="/static/img/user_back.jpg"></a>
 				上传图片
 			</div>
 		</div>
