--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -7,8 +7,8 @@
 	<title>途众好车</title>
 	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/bootstrap/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/css/mobile.css">
-	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/css/common.css">
+	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/mobile.css">
+	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/common.css">
 	
 	<script type="text/javascript" src="<{$weburl}>/static/js/uikit/jquery-1-11-3.js"></script>
 	<script type="text/javascript" src="<{$weburl}>/static/js/uikit/jquery.mobile.custom.min.js"></script>
