--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/mobile.css">
 	<link rel="stylesheet" href="<{$weburl}>/templates/m/css/common.css">
 	
-	<script type="text/javascript" src="<{$weburl}>/static/js/uikit/jquery-1-11-3.js"></script>
-	<script type="text/javascript" src="<{$weburl}>/static/js/uikit/jquery.mobile.custom.min.js"></script>
+	<script type="text/javascript" src="<{$weburl}>/static/js/jquery-1-11-3.js"></script>
+	<script type="text/javascript" src="<{$weburl}>/static/js/jquery.mobile.custom.min.js"></script>
 	<script src="<{$weburl}>/templates/m/css/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/static/js/Validform_v5.3.2_min.js"></script>
 </head>
