--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -97,7 +97,7 @@ $(document).ready(function() {
 		var del = $(this).siblings("p").children("img");
 		//发送数据
 		$.ajax({
-			url:'index.php?m=upload_car',
+			url:'m/index.php?m=upload_car',
 			type:'POST',
 			data:data,
 			cache: false,
