--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -127,7 +127,7 @@ $(document).ready(function() {
 				t.parent().siblings(".pic").children("input").val('');
 				t.hide();
 			}else{
-				alert('图片删除失败，请刷新重试');
+				alert(addpicture+'|'+cid+'|'+loc);
 			}
 		})
 	})
