--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -126,6 +126,7 @@ $(document).ready(function() {
 				t.parent().siblings(".pic").children("img").remove();
 				t.parent().siblings(".pic").children("input").val('');
 				t.hide();
+				alert(addpicture+'|112'+cid+'|'+loc);
 			}else{
 				alert(addpicture+'|'+cid+'|'+loc);
 			}
