--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -126,9 +126,9 @@ $(document).ready(function() {
 				t.parent().siblings(".pic").children("img").remove();
 				t.parent().siblings(".pic").children("input").val('');
 				t.hide();
-				alert(111);
+				alert(addpicture+'|112'+cid+'|'+loc);
 			}else{
-				alert(222);
+				alert(addpicture);
 			}
 		})
 	})
