--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -126,9 +126,8 @@ $(document).ready(function() {
 				t.parent().siblings(".pic").children("img").remove();
 				t.parent().siblings(".pic").children("input").val('');
 				t.hide();
-				alert(src+'|112'+cid+'|'+loc);
 			}else{
-				alert(src+'|'+cid+'|'+loc);
+				alert('图片删除失败，请刷新重试');
 			}
 		})
 	})
