--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -23,7 +23,7 @@
 				上传图片
 			</div>
 		</div>
-		<form name="form1" class="carform" enctype="multipart/form-data" method="post" action="<{$weburl}>/index.php?m=user">
+		<form name="form1" class="carform" enctype="multipart/form-data" method="post" action="<{$weburl}>/index.php?m=user&addpiture">
 		<div id="addpicContainer">
 			<ul class="upload" id="piclist">
 				<li class="pic01">
