--- a/templates/m/user_carlist.html
+++ b/templates/m/user_carlist.html
@@ -21,115 +21,75 @@
 		</div>
 		<div class="boxhzcl uk-margin-bottom"></div>
 		
-		
+		<{foreach from=$carslist item=cars}>		
 		<div class="business-shoucang uk-container-center business-hz uk-margin-bottom">
 			<div class="business-hz top">
-				<a href="#" class="uk-float-right"><i class="uk-icon-cog"></i> 编辑</a>
+				<a href="index.php?m=user&a=editcar&id=<{$cars.p_id}>&page=<{$currpage}>" class="uk-float-right"><i class="uk-icon-cog"></i> 编辑</a>
 				<span>
-					上架时间：2017-05-05 14:15
+					刷新时间：<{$cars.listtime}>
 				</span>
 			</div>
 			<div class="text business-hz">
 				<div class="img uk-float-left">
-					<a href="#"><img src="img/img-cs.jpg" /></a>
+					<a href="<{$cars.p_url}>"><{if $cars.p_mainpic<>''}><img src="<{$cars.p_mainpic}>" width="80" height="60"/><{else}><img src="/static/img/img-cs.jpg" /><{/if}></a>
 				</div>
 				<h2>
-					<a href="#">奥迪 奥迪Q5 2016款奥迪Q5 40 TFSI...</a>
+					<a href="<{$cars.p_url}>"><{if $cars.p_allname!=""}><{$cars.p_allname}><{else}><{$cars.p_name}><{/if}></a>
 				</h2>
-				<p>2012年08月 | 4.60万公里</p>
-				<p class="jg">当前价格： <span>¥7.60</span> 万</p>
+				<p><{$cars.p_year}>年<{$cars.p_month}>月 | <{$cars.p_kilometre}>万公里</p>
+				<p class="jg">当前价格： <span>¥<{$cars.p_price}></span> 万</p>
 			</div>
 			<div class="uk-grid uk-grid-collapse">
 				<div class="uk-width-1-2">
-					<a href="#" class="button uk-button">下架</a>
+					<a href="index.php?m=user&a=refresh&id=<{$cars.p_id}>&page=<{$currpage}>" class="button uk-button lx">刷新</a>
 				</div>
 				<div class="uk-width-1-2">
-					<a href="#" class="button uk-button lx">出库</a>
+					<a href="index.php?m=user&a=sellcar&sell=<{if $cars.issell==1}>0<{else}>1<{/if}>&id=<{$cars.p_id}>&page=<{$currpage}>" class="button uk-button lx"><{if $cars.issell==1}>恢复为在售<{else}>设置为已出售<{/if}></a> 
 				</div>
 			</div>
 		</div>
+		<{/foreach}>		
+
+		<{foreach from=$carslist item=cars}>
+			<tr bgcolor="#ffffff" onmouseover="style.backgroundColor='#f5f5f5'"  onmouseout="style.backgroundColor='#ffffff'">
+				<td align="center"><{if $cars.p_mainpic<>''}><img src="<{$cars.p_mainpic}>" width="80" height="60"/><{else}><div class="noimg">未上传图片</div><{/if}></td>
+				<td align="left">
+					<p><a href="<{$cars.p_url}>" target="_blank" class="f14 fb"><{if $cars.p_allname!=""}><{$cars.p_allname}><{else}><{$cars.p_name}><{/if}></a> <{if $cars.p_pics!=""}><span class="red">图</span><{/if}> <{if $cars.issell==1}><span class="red">已出售</span><{/if}></p>
+					<p class="gray">排量：<{$cars.p_gas}> 升 / 上牌日期：<{$cars.p_year}>年<{$cars.p_month}>月 / 颜色：<{$cars.p_color}> / 行驶里程：<{$cars.p_kilometre}> 万公里 / 信息编号:<{$cars.p_no}></p>
+					<p class="gray">刷新时间：<{$cars.listtime}></p>
+				</td>
+				<td align="center" class="orange01 f14"><{$cars.p_price}>万</td>
+				<td align="center" class="acmenu">
+					<p><a href="index.php?m=user&a=editcar&id=<{$cars.p_id}>&page=<{$currpage}>">编辑</a> | <a href="index.php?m=user&a=refresh&id=<{$cars.p_id}>&page=<{$currpage}>">刷新</a> | <a href="javascript:if(confirm('确实要删除吗?'))location='index.php?m=user&a=delcar&id=<{$cars.p_id}>&page=<{$currpage}>'">删除</a></p>
+					<p><a href="index.php?m=user&a=sellcar&sell=<{if $cars.issell==1}>0<{else}>1<{/if}>&id=<{$cars.p_id}>&page=<{$currpage}>"><{if $cars.issell==1}>恢复为在售<{else}>设置为已出售<{/if}></a> 
+					</p>
+				</td>
+			</tr>
+		<{/foreach}>
 		
-		<div class="business-shoucang uk-container-center business-hz uk-margin-bottom">
-			<div class="business-hz top">
-				<a href="#" class="uk-float-right"><i class="uk-icon-cog"></i> 编辑</a>
-				<span>
-					上架时间：2017-05-05 14:15
-				</span>
-			</div>
-			<div class="text business-hz">
-				<div class="img uk-float-left">
-					<a href="#"><img src="img/img-cs.jpg" /></a>
-				</div>
-				<h2>
-					<a href="#">奥迪 奥迪Q5 2016款奥迪Q5 40 TFSI...</a>
-				</h2>
-				<p>2012年08月 | 4.60万公里</p>
-				<p class="jg">当前价格： <span>¥7.60</span> 万</p>
-			</div>
-			<div class="uk-grid uk-grid-collapse">
-				<div class="uk-width-1-2">
-					<a href="#" class="button uk-button">下架</a>
-				</div>
-				<div class="uk-width-1-2">
-					<a href="#" class="button uk-button lx">出库</a>
-				</div>
-			</div>
-		</div>
-		
-		<div class="business-shoucang uk-container-center business-hz uk-margin-bottom">
-			<div class="business-hz top">
-				<a href="#" class="uk-float-right"><i class="uk-icon-cog"></i> 编辑</a>
-				<span>
-					下架时间：2017-05-05 14:15
-				</span>
-			</div>
-			<div class="text business-hz">
-				<div class="img uk-float-left">
-					<a href="#"><img src="img/img-cs.jpg" /></a>
-				</div>
-				<h2>
-					<a href="#">奥迪 奥迪Q5 2016款奥迪Q5 40 TFSI...</a>
-				</h2>
-				<p>2012年08月 | 4.60万公里</p>
-				<p class="jg">当前价格： <span>¥7.60</span> 万</p>
-			</div>
-			<div class="uk-grid uk-grid-collapse">
-				<div class="uk-width-1-2">
-					<a href="#" class="button uk-button">上架</a>
-				</div>
-				<div class="uk-width-1-2">
-					<a href="#" class="button uk-button lx">出库</a>
-				</div>
-			</div>
-		</div>
-		
-		<div class="business-shoucang uk-container-center business-hz uk-margin-bottom">
-			<div class="business-hz top">
-				<a href="#" class="uk-float-right"><i class="uk-icon-cog"></i> 编辑</a>
-				<span>
-					下架时间：2017-05-05 14:15
-				</span>
-			</div>
-			<div class="text business-hz">
-				<div class="img uk-float-left">
-					<a href="#"><img src="img/img-cs.jpg" /></a>
-				</div>
-				<h2>
-					<a href="#">奥迪 奥迪Q5 2016款奥迪Q5 40 TFSI...</a>
-				</h2>
-				<p>2012年08月 | 4.60万公里</p>
-				<p class="jg">当前价格： <span>¥7.60</span> 万</p>
-			</div>
-			<div class="uk-grid uk-grid-collapse">
-				<div class="uk-width-1-2">
-					<a href="#" class="button uk-button">上架</a>
-				</div>
-				<div class="uk-width-1-2">
-					<a href="#" class="button uk-button lx">出库</a>
-				</div>
-			</div>
-		</div>
-		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		<script type="text/javascript" src="<{$weburl}>/static/js/uikit/jquery-3.2.0.min.js"></script>
 		<script type="text/javascript" src="<{$weburl}>/static/js/uikit/uikit.min.js"></script>
 	</body>
