--- a/templates/m/user_carlist.html
+++ b/templates/m/user_carlist.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="topbox uk-grid uk-grid-collapse">
 			<div class="uk-width-1-10 uk-text-center left">
-				<a href="#"><i class="uk-icon-chevron-left"></i></a>
+				<a href="javascript:window.history.go(-1);"><i class="uk-icon-chevron-left"></i></a>
 			</div>
 			<div class="uk-width-8-10 uk-text-center center">
 				<span>在库车辆</span>
@@ -48,47 +48,7 @@
 				</div>
 			</div>
 		</div>
-		<{/foreach}>		
-
-		<{foreach from=$carslist item=cars}>
-			<tr bgcolor="#ffffff" onmouseover="style.backgroundColor='#f5f5f5'"  onmouseout="style.backgroundColor='#ffffff'">
-				<td align="center"><{if $cars.p_mainpic<>''}><img src="<{$cars.p_mainpic}>" width="80" height="60"/><{else}><div class="noimg">未上传图片</div><{/if}></td>
-				<td align="left">
-					<p><a href="<{$cars.p_url}>" target="_blank" class="f14 fb"><{if $cars.p_allname!=""}><{$cars.p_allname}><{else}><{$cars.p_name}><{/if}></a> <{if $cars.p_pics!=""}><span class="red">图</span><{/if}> <{if $cars.issell==1}><span class="red">已出售</span><{/if}></p>
-					<p class="gray">排量：<{$cars.p_gas}> 升 / 上牌日期：<{$cars.p_year}>年<{$cars.p_month}>月 / 颜色：<{$cars.p_color}> / 行驶里程：<{$cars.p_kilometre}> 万公里 / 信息编号:<{$cars.p_no}></p>
-					<p class="gray">刷新时间：<{$cars.listtime}></p>
-				</td>
-				<td align="center" class="orange01 f14"><{$cars.p_price}>万</td>
-				<td align="center" class="acmenu">
-					<p><a href="index.php?m=user&a=editcar&id=<{$cars.p_id}>&page=<{$currpage}>">编辑</a> | <a href="index.php?m=user&a=refresh&id=<{$cars.p_id}>&page=<{$currpage}>">刷新</a> | <a href="javascript:if(confirm('确实要删除吗?'))location='index.php?m=user&a=delcar&id=<{$cars.p_id}>&page=<{$currpage}>'">删除</a></p>
-					<p><a href="index.php?m=user&a=sellcar&sell=<{if $cars.issell==1}>0<{else}>1<{/if}>&id=<{$cars.p_id}>&page=<{$currpage}>"><{if $cars.issell==1}>恢复为在售<{else}>设置为已出售<{/if}></a> 
-					</p>
-				</td>
-			</tr>
-		<{/foreach}>
-		
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+		<{/foreach}>				
 
 		<script type="text/javascript" src="<{$weburl}>/static/js/uikit/jquery-3.2.0.min.js"></script>
 		<script type="text/javascript" src="<{$weburl}>/static/js/uikit/uikit.min.js"></script>
