--- a/templates/m/user_carlist.html
+++ b/templates/m/user_carlist.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="topbox uk-grid uk-grid-collapse">
 			<div class="uk-width-1-10 uk-text-center left">
-				<a href="javascript:window.history.go(-1);"><i class="uk-icon-chevron-left"></i></a>
+				<a href="<{$weburl}>/m/index.php?m=user"><i class="uk-icon-chevron-left"></i></a>
 			</div>
 			<div class="uk-width-8-10 uk-text-center center">
 				<span>在库车辆</span>
