--- a/templates/m/css/mobile.css
+++ b/templates/m/css/mobile.css
@@ -17,7 +17,7 @@ ul li {list-style:none;}
 .footer-bg {background:#e8e8e8;}
 .price_a a {color:black;}
 
-.mobile_user_top {width:100%; height:40px; line-height:40px; text-align:center; background:#8dc420; font-size:2.1rem; color:white;}
+.mobile_user_top {width:100%; height:40px; line-height:40px; text-align:center; background:#fc7000; font-size:2.1rem; color:white;}
 .mobile_user_top img {margin-left:27px; height:40px; float:left;}
 .user_logout {float:right; color:white; font-size:1.6rem; margin:0 10px 0 0;}
 .img_collection {height:50px;}
