--- a/templates/m/user.html
+++ b/templates/m/user.html
@@ -41,7 +41,7 @@
 			<a href="<{$weburl}>/m/index.php?m=user&a=carlist"><img src="<{$weburl}>/static/img/business-nav-01.png" /></a>
 		</div>
 		
-		<a href="<{$weburl}>/mdealer.php?m=user&a=logout" class="business-button uk-button">退出登录</a>
+		<a href="<{$weburl}>/index.php?m=user&a=logout" class="business-button uk-button">退出登录</a>
 	
 		<{include file="mobile/`$setting.templates`/common/bottombar.html"}>
 		<script type="text/javascript" src="<{$weburl}>/static/js/uikit/jquery-3.2.0.min.js"></script>
