--- a/templates/m/user_carlist.html
+++ b/templates/m/user_carlist.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="text business-hz">
 				<div class="img uk-float-left">
-					<a href="<{$cars.p_url}>"><{if $cars.p_mainpic<>''}><img src="<{$cars.p_mainpic}>" width="80" height="60"/><{else}><img src="/static/img/img-cs.jpg" /><{/if}></a>
+					<a href="<{$cars.p_url}>"><{if $cars.p_mainpic<>''}><img src="<{$cars.p_mainpic}>" width="80" height="60"/><{else}><img src="/static/img/img-cs.png" /><{/if}></a>
 				</div>
 				<h2>
 					<a href="<{$cars.p_url}>"><{if $cars.p_allname!=""}><{$cars.p_allname}><{else}><{$cars.p_name}><{/if}></a>
