--- a/templates/m/cars.html
+++ b/templates/m/cars.html
@@ -29,7 +29,7 @@
 		<div class="bd">
 			<ul>
 				<{foreach from=$pic_list item=pic}>
-				<li><a href="#"><img src="<{$pic}>" /></a></li>
+				<li><a href="#"><img _src="<{$pic}>" src="images/blank.png" /></a></li>
 				<{/foreach}>
 			</ul>
 		</div>
