--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -75,6 +75,7 @@
 			<input type="hidden" name="a" value="<{$ac}>">
 			<input type="hidden" name="carid" value="<{$carid}>">
 			<input type="hidden" name="page" value="<{$page_g}>">
+			<input type="hidden" name="sure" value="1">
 		</div>
 		</form>
 	</div>
