--- a/templates/m/user.html
+++ b/templates/m/user.html
@@ -13,7 +13,7 @@
 <body style="background:#f5f5f5;">
 		<div class="topbox uk-grid uk-grid-collapse">
 			<div class="uk-width-1-10 uk-text-center left">
-				<a href="/mobile.php"><i class="uk-icon-chevron-left"></i></a>
+				<a href="index.php"><i class="uk-icon-chevron-left"></i></a>
 			</div>
 			<div class="uk-width-8-10 uk-text-center center">
 				<span>商家中心</span>
