--- a/templates/m/css/business.css
+++ b/templates/m/css/business.css
@@ -101,6 +101,11 @@ html,body{padding: 0; margin: 0 auto; max-width: 640px; min-width: 320px; backgr
 .business-tianjia .box .right>select{border: none; width: 95%; line-height: 40px;}
 
 
+/*分页*/
+.page_list{height:35px;line-height:35px;padding:5px 10px;text-align:right;background:#f9f9f9;}
+.page_list span,.page_list a{margin-right:5px;padding:3px 5px;border:1px solid #d5dfe8;background:#fff;}
+.page_list a.selected{background:#ee7700;color:#fff;border:1px solid #ee7700;}
+
 
 
 
