--- a/templates/default/default/assess.html
+++ b/templates/default/default/assess.html
@@ -6,9 +6,35 @@
 <meta content="<{$setting.keywords}>"  name="keywords"/>
 <meta content="<{$setting.description}>" name="description"/>
 <link href="<{$weburl}>/templates/default/<{$setting.templates}>/css/page.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="<{$weburl}>/templates/default/<{$setting.templates}>/js/jquery-1.7.1.js"></script>
+<script type="text/javascript" src="<{$weburl}>/static/js/jquery.js"></script>
 <script type="text/javascript" src="<{$weburl}>/static/js/Validform_v5.3.2_min.js"></script>
-
+<script type="text/javascript">
+$(document).ready(function() {
+    //品牌选择
+	$("#brand").change(function(){
+		$.get("<{$weburl}>/index.php?m=ajax&ajax=1", { 
+			brandid :  $("#brand").val() 
+		}, function (data, textStatus){
+               $("#subbrand").html(data); // 把返回的数据添加到页面上
+			}
+		);
+	});
+	//品牌选择
+	$("#subbrand").change(function(){
+		$.get("<{$weburl}>/index.php?m=ajax&ajax=1", { 
+			subbrandid :  $("#subbrand").val() 
+		}, function (data, textStatus){
+               $("#subsubbrand").html(data); // 把返回的数据添加到页面上
+			}
+		);
+	});
+	
+	//表单验证
+	$(".carform").Validform({
+		tiptype:2
+	});
+});
+</script>
 </head>
 <body>
 <!--内容--> 
