--- a/templates/default/default/assess.html
+++ b/templates/default/default/assess.html
@@ -6,7 +6,7 @@
 <meta content="<{$setting.keywords}>"  name="keywords"/>
 <meta content="<{$setting.description}>" name="description"/>
 <link href="<{$weburl}>/templates/default/<{$setting.templates}>/css/page.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="<{$weburl}>/static/js/jquery.js"></script>
+<script type="text/javascript" src="<{$weburl}>/static/js/jquery-1.7.1.js"></script>
 <script type="text/javascript" src="<{$weburl}>/static/js/Validform_v5.3.2_min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
