--- a/templates/default/default/maicar.html
+++ b/templates/default/default/maicar.html
@@ -8,6 +8,33 @@
 <link href="<{$weburl}>/templates/default/<{$setting.templates}>/css/page.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="<{$weburl}>/templates/default/<{$setting.templates}>/js/jquery-1.7.1.js"></script>
 <script type="text/javascript" src="<{$weburl}>/static/js/Validform_v5.3.2_min.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+    //品牌选择
+	$("#brand").change(function(){
+		$.get("<{$weburl}>/index.php?m=ajax&ajax=1", { 
+			brandid :  $("#brand").val() 
+		}, function (data, textStatus){
+               $("#subbrand").html(data); // 把返回的数据添加到页面上
+			}
+		);
+	});
+	//品牌选择
+	$("#subbrand").change(function(){
+		$.get("<{$weburl}>/index.php?m=ajax&ajax=1", { 
+			subbrandid :  $("#subbrand").val() 
+		}, function (data, textStatus){
+               $("#subsubbrand").html(data); // 把返回的数据添加到页面上
+			}
+		);
+	});
+	
+	//表单验证
+	$(".carform").Validform({
+		tiptype:2
+	});
+});
+</script>
 
 </head>
 <body>
@@ -20,14 +47,25 @@
 					<table cellspacing="0" cellpadding="0" width="100%"  class="sell_table">
 						<tr>
 							<th> 品&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;牌：</th>
-							<td colspan="3">
-								<input name="p_contact_tel" type="text" size="30" class="inp01" value="" datatype="m" nullmsg="请填车辆品牌！"/>
+							<td colspan="3"><select name="p_brand" id="brand" datatype="n" nullmsg="请选择品牌！" class="select01">
+									<{$selectbrand}>
+								</select>
 							</td>
 						</tr>
 						<tr>
-							<th> 报&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;价：</th>
+							<th> 车&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;系：</th>
 							<td>
-								<input name="p_contact_tel" type="text" size="30" class="inp01" value="" datatype="m" nullmsg="请填车辆颜色！"/>
+								<select id="subbrand" name="p_subbrand" datatype="n" nullmsg="请选择车系！" class="select01">
+									<option value="" selected>请选择车系</option>                       
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<th> 车&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;型：</th>
+							<td>
+								<select id="subsubbrand" name="p_subsubbrand" datatype="n" nullmsg="请选择款式！" class="select01">
+								<option value="" selected>请选择款式</option>
+							</select>
 							</td>
 						</tr>
 						<tr>
@@ -45,12 +83,6 @@
 							<th>行驶里程：</th>
 							<td><input name="p_kilometre" type="text" id="p_kilometre" size="15" />
 								<span class="gray">(万公里)</span></td>
-							</td>
-						</tr>
-						<tr>
-							<th> 车况说明：</th>
-							<td>
-								<textarea name="p_details" id="p_details" rows="5" cols="30"></textarea>
 							</td>
 						</tr>
 						<tr>
