--- a/templates/default/default/maicar.html
+++ b/templates/default/default/maicar.html
@@ -43,7 +43,7 @@ $(document).ready(function() {
 <div class="assess_banner_mc">
 		<div class="assessbox">
 			<div class="form_title"><span>我要卖车</span></div>
-				<form name="carform" class="carform" method="post" action="<{$weburl}>/index.php?m=assesscar">
+				<form name="carform" class="carform" method="post" action="<{$weburl}>/index.php?m=maiche">
 					<table cellspacing="0" cellpadding="0" width="100%"  class="sell_table">
 						<tr>
 							<th> 品&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;牌：</th>
