--- a/templates/admin/maicar_list.html
+++ b/templates/admin/maicar_list.html
@@ -45,7 +45,7 @@
 	<td align="center"><{$cars.p_price}></td>
 	<td align="center"><{$cars.p_addtime}></td>
 	<td align="center"><{$cars.p_assesstime}></td>
-	<td align="center" class="rightmenu"><a href="<{$adminpage}>?m=maicar&a=assess&id=<{$cars.p_id}>&page=<{$page}>">评估</a> | <a href="javascript:if(confirm('ID:<{$cars.p_id}>&nbsp;确实要删除吗?'))location='<{$adminpage}>?m=maicar&a=del&id=<{$cars.p_id}>&page=<{$page}>'">删除</a></td>
+	<td align="center" class="rightmenu"><!--<a href="<{$adminpage}>?m=maicar&a=assess&id=<{$cars.p_id}>&page=<{$page}>">评估</a> | --><a href="javascript:if(confirm('ID:<{$cars.p_id}>&nbsp;确实要删除吗?'))location='<{$adminpage}>?m=maicar&a=del&id=<{$cars.p_id}>&page=<{$page}>'">删除</a></td>
 	</tr>
 	<{/foreach}>
 	<tr>
