--- a/templates/default/default/index.html
+++ b/templates/default/default/index.html
@@ -170,14 +170,13 @@
 </div>
 
 
-<div class="sch-lcbox">
-	<div class="sch-lc"><img src="<{$weburl}>/default/default/img/sch-lc.jpg"</div>
-</div>
+
 
 
 
 
 <div class="fullSlide">
+	
     <div class="leftsearch">
       <div class="leftsearch_tab">
         <ul class="clearfix">
@@ -273,6 +272,13 @@ jQuery(".fullSlide").slide({ titCell:".hd ul", mainCell:".bd ul", effect:"fold",
 });
 </script>
 <{if $setting.version==2 or $setting.version==3}>
+	
+	
+<div class="sch-lcbox">
+	<div class="sch-lc"></div>
+</div>	
+	
+	
 <div class="main mt20 clearfix" id="hot_brands">
   <div class="tab_title">
     <ul class="clearfix">
