--- a/templates/default/default/css/shop.css
+++ b/templates/default/default/css/shop.css
@@ -295,7 +295,7 @@ font-size: 14px;
 .inf_time {
 	font-size: 12px;	
 	color: #999;
-  	font-family: tahoma;
+  	font-family: Microsoft YaHei;
   	text-align: center;
   	padding-top: 5px;
 }
