--- a/templates/default/default/index.html
+++ b/templates/default/default/index.html
@@ -457,8 +457,8 @@ $(function() {
 
 <div class="main mt15 clearfix">
   <ul class="indexnews_tab clearfix">
-    <li class="here">友情链接</li>
-    <li>热门车系</li>
+    <li>友情链接</li>
+    <li class="here">热门车系</li>
   </ul>
   <div class="indexnews_box">
     <div class="p10">
